# Binary_Search

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
adaptive_binary_search/: README.md  adaptive_binary_search.cpp  adaptive_binary_search.h
boundless_binary_range_search/: README.md  boundless_binary_range_search.cpp  boundless_binary_range_search.h
boundless_binary_search/: README.md  boundless_binary_search.cpp  boundless_binary_search.h
doubletapped_binary_search/: README.md  doubletapped_binary_search.cpp  doubletapped_binary_search.h
monobound_binary_search/: README.md  monobound_binary_search.cpp  monobound_binary_search.h
monobound_interpolated_binary_search/: README.md  monobound_interpolated_binary_search.cpp  monobound_interpolated_binary_search.h
monobound_quaternary_search/: README.md  monobound_quaternary_search.cpp  monobound_quaternary_search.h
standard_binary_search/: README.md  standard_binary_search.cpp  standard_binary_search.h
tripletapped_binary_search/: README.md  tripletapped_binary_search.cpp  tripletapped_binary_search.h
